--- a/src/azure-cli/requirements.py3.Darwin.txt
+++ b/src/azure-cli/requirements.py3.Darwin.txt
@@ -9,13 +9,12 @@ azure-cli-core==2.21.0.1
 azure-cli-telemetry==1.0.6
 azure-cli==2.21.0.1
 azure-common==1.1.22
-azure-core==1.10.0
+azure-core==1.14.0b1
 azure-cosmos==3.2.0
 azure-datalake-store==0.0.49
 azure-functions-devops-build==0.0.22
 azure-graphrbac==0.60.0
-azure-identity==1.5.0b2
-azure-keyvault==1.1.0
+azure-identity==1.6.0b3
 azure-keyvault-administration==4.0.0b3
 azure-keyvault==1.1.0
 azure-loganalytics==0.1.0
@@ -35,7 +34,7 @@ azure-mgmt-consumption==2.0.0
 azure-mgmt-containerinstance==1.5.0
 azure-mgmt-containerregistry==3.0.0rc17
 azure-mgmt-containerservice==11.1.0
-azure-mgmt-core==1.2.1
+azure-mgmt-core==1.3.0b1
 azure-mgmt-cosmosdb==3.0.0
 azure-mgmt-databoxedge==0.2.0
 azure-mgmt-datalake-analytics==0.2.1
