--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -16,7 +16,7 @@
 /src/azure-cli-core/azure/cli/core/_profile.py @jiasli @evelyn-ys
 /src/azure-cli-core/azure/cli/core/adal_authentication.py @jiasli @evelyn-ys
 /src/azure-cli-core/azure/cli/core/msal_authentication.py @jiasli @evelyn-ys
-/src/azure-cli-core/azure/cli/core/style.py @jiasli @evelyn-ys @@zhoxing-ms
+/src/azure-cli-core/azure/cli/core/style.py @jiasli @evelyn-ys @zhoxing-ms
 /src/azure-cli/azure/cli/command_modules/acr/ @djyou @fengzhou-msft @yungezz
 /src/azure-cli/azure/cli/command_modules/acs/ @rjtsdl @fengzhou-msft
 /src/azure-cli/azure/cli/command_modules/advisor/ @Prasanna-Padmanabhan
