{Misc.} Add codeowners for auth and style (#17633)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,6 +13,10 @@
 /src/azure-cli-testsdk/ @jsntcy @jiasli @kairu-ms @qwordy
 /src/azure-cli-core/ @jiasli @Juliehzl @fengzhou-msft @evelyn-ys @jsntcy @houk-ms
 /src/azure-cli-core/azure/cli/core/extension/ @msyyc @fengzhou-msft
+/src/azure-cli-core/azure/cli/core/_profile.py @jiasli @evelyn-ys
+/src/azure-cli-core/azure/cli/core/adal_authentication.py @jiasli @evelyn-ys
+/src/azure-cli-core/azure/cli/core/msal_authentication.py @jiasli @evelyn-ys
+/src/azure-cli-core/azure/cli/core/style.py @jiasli @evelyn-ys @zhoxing-ms
 /src/azure-cli/azure/cli/command_modules/acr/ @djyou @fengzhou-msft @yungezz
 /src/azure-cli/azure/cli/command_modules/acs/ @rjtsdl @fengzhou-msft
 /src/azure-cli/azure/cli/command_modules/advisor/ @Prasanna-Padmanabhan
