--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -111,6 +111,7 @@ msal==1.10.0
 msrest==0.6.21
 msrestazure==0.6.3
 oauthlib==3.0.1
+packaging==20.9
 paramiko==2.6.0
 pbr==5.3.1
 portalocker==1.7.1
