remove recording processor sas token

--- a/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_network_vpn_gateway_package_capture.yaml
+++ b/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_network_vpn_gateway_package_capture.yaml
@@ -2514,7 +2514,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"sasUrl": "https://clitestvpngw000002.blob.azure.com/clitestvpngw000003?se=2021-04-15T08%3A18Z&sp=racwd&sv=2018-11-09&sr=b&sig=xBni%2BBqRf16ODaSeIK4F%2B79BcyyiYSX%2F3QILRoVJwDU%3D"}'
+    body: '{"sasUrl": "https://clitestvpngw000002.blob.azure.com/clitestvpngw000003?se=2020-10-27&sp=w&sv=2018-11-09&sr=c"}'
     headers:
       Accept:
       - application/json
