Define theme for Cloud Shell

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -56,5 +56,5 @@
 /src/azure-cli/azure/cli/command_modules/sql/ @jaredmoo @Juliehzl @evelyn-ys
 /src/azure-cli/azure/cli/command_modules/storage/ @Juliehzl @jsntcy @zhoxing-ms @evelyn-ys
 /src/azure-cli/azure/cli/command_modules/synapse/ @idear1203 @sunsw1994 @aim-for-better
-/src/azure-cli/azure/cli/command_modules/util/ @jiasli @Juliehzl @zhoxing-ms
+/src/azure-cli/azure/cli/command_modules/util/ @jiasli @Juliehzl @zhoxing-ms @evelyn-ys
 /src/azure-cli/azure/cli/command_modules/vm/ @qwordy @houk-ms @yungezz
